--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <string name="auth_sign_up">Sign Up</string>
     <string name="backup_message_creating">Creating backup…</string>
     <string name="backup_message_finishing">Finishing…</string>
-    <string name="backup_message_migrating">Migrating from previous version…</string>
+    <string name="backup_message_migrating">Migrating from previous app version…</string>
     <string name="backup_message_restoring">Restoring backup…</string>
     <string name="backup_message_starting">Starting…</string>
     <string name="button_remove">Remove</string>
@@ -131,6 +131,7 @@
     <string name="toast_backup_nothing">Nothing to backup.</string>
     <string name="toast_copied">Copied.</string>
     <string name="toast_email_required">Email is required.</string>
+    <string name="toast_migrate_finished">%1$d notes are migrated from previous app version.</string>
     <string name="toast_no_file_manager_app">Install a file manager application.</string>
     <string name="toast_note_drafted">Marked as a draft.</string>
     <string name="toast_note_undrafted">Marked as not a draft.</string>
