--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -145,4 +145,5 @@
     <string name="prefkey_flag_secure_enabled" translatable="false">flag_secure_enabled</string>
     <string name="preference_summary_flag_secure">Prevents from doing screenshots and displaying previews.</string>
     <string name="preference_title_flag_secure">Screenshot protection</string>
+    <string name="error_incorrect_email">Incorrect email address</string>
 </resources>
