--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -147,4 +147,9 @@
     <string name="preference_summary_restore_dropbox">Restore your notes from Dropbox application folder.</string>
     <string name="preference_summary_restore_storage">Restore from previously created backup file.</string>
     <string name="preference_summary_export_plain_text">Export notes into a human-readable text file.</string>
+    <plurals name="drawer_header_counter">
+        <item quantity="zero">No notes</item>
+        <item quantity="one">%d note</item>
+        <item quantity="other">%d notes</item>
+    </plurals>
 </resources>
