--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -127,6 +127,8 @@
     <string name="preference_summary_restore_dropbox">Восстановить из папки приложения.</string>
     <string name="preference_summary_restore_storage">Восстановить из ранее созданной копии.</string>
     <string name="preference_summary_export_plain_text">Копирование в простой текстовый файл.</string>
+    <string name="prefcat_title_appearance">Внешний вид</string>
+    <string name="preference_title_font_size">Размер шрифта</string>
     <plurals name="drawer_header_counter">
         <item quantity="one">%d заметка</item>
         <item quantity="few">%d заметки</item>
