--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -25,6 +25,7 @@
     <string name="dialog_new_pin_title">Новый код доступа</string>
     <string name="dialog_pin_hint">4 цифры</string>
     <string name="dialog_reminder_days_title">Дни недели</string>
+    <string name="dialog_reminder_time_title">Время</string>
     <string name="dialog_remove_note_message">Удаленную заметку нельзя восстановить.</string>
     <string name="dialog_remove_note_title">Удалить заметку?</string>
     <string name="dialog_replacement_table_title">Таблица замены</string>
