--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -62,11 +62,11 @@
     <string name="pin_too_short">Код доступа слишком короткий.</string>
     <string name="prefcat_title_reminder">Напоминания</string>
     <string name="prefcat_title_security">Безопасность</string>
-    <string name="preference_summary_pin">Приложение будет запрашивать код доступа через 5 минут после выхода.</string>
+    <string name="preference_summary_pin">Приложение будет запрашивать код доступа через заданное время после выхода.</string>
     <string name="preference_summary_reminder_never">Никогда</string>
     <string name="preference_title_backup">Сохранить копию</string>
     <string name="preference_title_plain_text">Текстовый файл</string>
-    <string name="preference_title_pin">Установить код доступа</string>
+    <string name="preference_title_pin">Включить код доступа</string>
     <string name="preference_title_reminder_days">Дни недели</string>
     <string name="preference_title_reminder_time">Время</string>
     <string name="preference_title_restore">Восстановить</string>
@@ -103,6 +103,7 @@
     <string name="preference_title_theme">Тема</string>
     <string name="preference_title_link_dropbox">Привязать аккаунт Dropbox</string>
     <string name="preference_summary_current_account">Текущий аккаунт: %1$s</string>
+    <string name="preference_title_pin_timeout">Таймаут блокировки</string>
     <plurals name="drawer_header_counter">
         <item quantity="one">%d заметка</item>
         <item quantity="few">%d заметки</item>
