--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -107,6 +107,7 @@
     <string name="feedback_comment">
         Здесь вы можете оставить свои предложения, идеи, пожелания или вопросы.
     </string>
+    <string name="toast_backup_failed">Пожалуйста, убедитесь, что вы выбрали верный файл или устройство.</string>
     <plurals name="drawer_header_counter">
         <item quantity="one">%d заметка</item>
         <item quantity="few">%d заметки</item>
