--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -22,8 +22,7 @@
     <string name="dialog_colorpicker_title">Цвет</string>
     <string name="dialog_current_pin_title">Текущий код доступа</string>
     <string name="dialog_custom_date_title">Изменить дату и время</string>
-    <string name="dialog_new_pin_title">Новый код доступа</string>
-    <string name="dialog_pin_hint">4 цифры</string>
+    <string name="dialog_new_passcode_title">Новый код доступа</string>
     <string name="dialog_reminder_days_title">Дни недели</string>
     <string name="dialog_reminder_time_title">Время</string>
     <string name="dialog_remove_note_message">Удаленную заметку нельзя восстановить.</string>
@@ -55,11 +54,10 @@
     <string name="note_unstar">Снять отметку</string>
     <string name="notification_reminder_content_text">Время что-нибудь написать.</string>
     <string name="password_hint">Пароль</string>
-    <string name="pin_disabled">Защита отключена.</string>
-    <string name="pin_enabled">Включена защита с помощью кода доступа.</string>
-    <string name="pin_incorrect">Неверный код доступа.</string>
-    <string name="pin_required">Код доступа</string>
-    <string name="pin_too_short">Код доступа слишком короткий.</string>
+    <string name="passcode_disabled">Защита отключена.</string>
+    <string name="passcode_enabled">Включена защита с помощью кода доступа.</string>
+    <string name="passcode_incorrect">Неверный код доступа.</string>
+    <string name="passcode_required">Введите код доступа</string>
     <string name="prefcat_title_reminder">Напоминания</string>
     <string name="prefcat_title_security">Безопасность</string>
     <string name="preference_summary_pin">Приложение будет запрашивать код доступа через заданное время после выхода.</string>
